--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -36,6 +36,8 @@
     "jsx-a11y/label-has-associated-control": 0,
     "react/jsx-one-expression-per-line": 0,
     "no-console": 0,
-    "comma-dangle": 0
+    "comma-dangle": 0,
+    "no-trailing-spaces": 0,
+    "space-before-function-paren": 0
   }
 }
